--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -90,7 +90,7 @@ $textAltColor:white;
         width: 26%;
        margin-top: 20%;
   @media (min-width:400px){margin-top:5%} 
-@media screen and(min-width:900px) {
+@media screen and (min-width:900px) {
 //  width:40%;
  // margin-left:30%
 }}
@@ -974,4 +974,17 @@ background-color: black;
 #hmBot{
  // transform: rotateZ(-45deg) translateY(200%) translateX(15%);
 
+}
+
+#utilities {
+  display: none;
+  position: fixed;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -10%);
+  z-index: 10;
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid #000;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
 }
