--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -30,7 +30,7 @@
     
     
     
-    <div class="eventBody"><form action="/adjustDates"method="post" ><button type="submit">adjust Dates</button></form></div>
+    <div class="eventBody"><form action="/processTransactions"method="post" ><button type="submit">process transactions</button></form></div>
 
     <div class="eventBody"><form action="/moveDuplicates"method="post" ><button type="submit">move Duplacates</button></form></div>
     
@@ -104,7 +104,7 @@
         <option value="">All Months</option>
         <option value="01">January</option>
         <option value="02">February</option>
-        <!-- ... -->
+        <!-- ... -->                                                                                  
         <option value="03">March</option>
         <option value="04">April</option>
         <option value="05">May</option>
@@ -220,8 +220,13 @@
                         <%= memo %>
                     </td>
                     <td><button type="submit()">update</button></td>
-                </tr>
-            </form>
+                </form>
+                <form action="/delTrans" method="post">
+                    <input name="transId" type="hidden" value="<%= data[4][i]._id %>">
+                    <td><button type="submit">delete</button></td>
+                  </form>
+                  
+            </tr>
                     <% } %>
                     <!---->
         </tbody>
